# BarcodeCompare

./: .clang-format  CMakeLists.txt
data/MO009053_Tag_data/: 内盒.xls
doc/: 使用说明.docx
src/app/: main_window.cpp
src/compare/: high_precision.cpp  high_precision.h  inner_box.cpp  inner_box.h  outer_box.cpp  outer_box.h
test/: CMakeLists.txt  test_add.cpp  test_mkdir.cpp  test_order.cpp
